<resources>
    <string name="app_name">Gkmept</string>
    <string name="EnterUserName">请输入用户名</string>
    <string name="EnterPassword">请输入密码</string>
    <string name="EnterIp">请输入IP地址</string>
    <string name="Submit">登陆</string>
    <string name="title_activity_bottom">NAS服务器</string>
    <string name="title_recent">最近</string>
    <string name="title_file">文件</string>
    <string name="title_folder">文件夹</string>
    <string name="title_photo">照片和视频</string>
    <string name="title_mine">我的</string>
    <string name="Delete">删除</string>
    <string name="Upload">上传</string>
    <string name="Check">查看</string>
    <string name="Download">下载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
