<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editMainIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:textSize="15sp"
                android:text="192.168.0.107"
                android:hint="@string/EnterIp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editMainUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:textSize="15sp"
                android:text="ycy"
                android:hint="@string/EnterUserName"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editMainPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:hint="@string/EnterPassword"
                android:textSize="15sp"
                android:text="yzh140309yzh"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonMainSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:text="@string/Submit"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>