<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/imageButtonFile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/foldernormal"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/buttonFile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/title_file"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/imageButtonFolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/foldernormal"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/buttonFolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_folder"
                android:background="@android:color/transparent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/imageButtonImageVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/foldernormal"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/buttonImageVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_photo"
                android:background="@android:color/transparent"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addclose"
            android:layout_gravity="center"
            android:background="@android:color/transparent" />
    </LinearLayout>


</LinearLayout>